fdo#68381 take care of cell notes on Transpose

Change-Id: I4272b45a1c8ad34b540ee39d9ef9dd717d4f6325